# fastapi-minimalism

./: .gitignore  CHANGELOG.md  README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt
{{cookiecutter.repo_name}}/src/: main.py
{{cookiecutter.repo_name}}/src/app/api/: api.py
{{cookiecutter.repo_name}}/src/app/core/: config.py  event_handler.py
{{cookiecutter.repo_name}}/src/app/services/: {{cookiecutter.project_slug}}_services.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.project_slug}}/: utils.py
{{cookiecutter.repo_name}}/tests/: test_api.py
