[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
dynamic = ["dependencies"]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "flake8>=7.1.0",
    "isort>=5.13.2",
    "black>=24.4.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["{{ cookiecutter.project_slug }}"]  # list of folders that contain the packages (["."] by default)

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | data
    | venv
    | tmp
    | notebooks
  )/
)
'''

[tool.isort]
profile = "hug"
line_length = 86
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = [
  ".","src"
]